# Spinner

./: README
src/: compare_trainingimages_to_testimages  dependencies.sh  dicom2asl  dicom2asl.pl  dicom2scalarimage  dicom2scalarimage.pl  is_brain_in_image
src/rcpp/: README.txt  pingpong.cpp  sortVector.cpp
src/rcpp/Ritk/: DESCRIPTION  README.txt
src/rcpp/Ritk/R/: itkReadImageFile.R  itkReadImageFile.R~
src/rcpp/Ritk/man/: Ritk-package.Rd
src/rcpp/Ritk/src/: CMakeLists.txt  itkImageFileReader2D.cpp
src/rcpp/RitkImageFileReader2D/: CMakeLists.txt  ITKImageFileReader2D.cxx  README.txt
src/rcpp/Ritk_EntryLevelExamples/: CMakeLists.txt  CMakeLists.txt~  README.txt
src/rcpp/itkImageFileReader2D/: CMakeLists.txt  README.txt  itkImageFileReader2D.cpp
testing/: dicom2asl_test  dicom2scalarimage_test  make_basic_test  push2pacs_test  run_tests
